fixed x scrolling bug on mobile

--- a/src/layouts/custom.css
+++ b/src/layouts/custom.css
@@ -10,6 +10,9 @@ html{
   overflow-x: hidden;
   -webkit-overflow-scrolling: touch;
 }
+body{
+  overflow-x: hidden;
+}
 
 section {
     position: relative;
